@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
title Biểu đồ lớp phân tích module Khuyến mãi\nMức mô hình: Specification
class PromotionPage <<boundary>> {
  + createPromotion(data)
  + updatePromotion(id, data)
}
class PromotionController <<control>> {
  + create(data): Promotion
  + update(id, data): Promotion
  + calculatePrice(gameId, at): Money
}
class Promotion <<entity>> { discountValue\nstartAt\nendAt\nstatus }
class GamePromotion <<entity>>
class Game <<entity>> { originalPrice }

PromotionPage ..> PromotionController : gọi
PromotionController ..> Promotion : quản lý
PromotionController ..> GamePromotion : quản lý phạm vi áp dụng
PromotionController ..> Game : tính giá
Promotion "1" -- "0..*" GamePromotion : gồm
Game "1" -- "0..*" GamePromotion : được áp dụng
@enduml
